          _              __            _   _        __
 _ __ ___| |_ _ __ ___  / _| ___  _ __| |_| |__    / / __   __ _  __ _
| '__/ _ \ __| '__/ _ \| |_ / _ \| '__| __| '_ \  / / '_ \ / _` |/ _` |
| | |  __/ |_| | | (_) |  _| (_) | |  | |_| | | |/ /| | | | (_| | (_| |
|_|  \___|\__|_|  \___/|_|  \___/|_|   \__|_| |_/_/ |_| |_|\__, |\__,_|
                                                           |___/
# RetroForth 2023.1 Release Notes

----------------------------------------------------------------

* no longer display warning on files with only test blocks (#87)
* added `script:current-line-text` (#85)

----------------------------------------------------------------