@@ -217,7 +217,9 @@ depth	-n	-	-	Return the number of items on the stack.			class:word	{n/a}	{n/a}	g
 dip	nq-n	-	-	Temporarily remove n from the stack, execute the quotation, and then restore n to the stack.			class:word	{n/a}	{n/a}	global	all	
 does	q-	-	-	Attach an action to the most recently created word. This is used in a manner similar to CREATE/DOES> in traditional Forth.			class:word	{n/a}	{n/a}	global	all	
 double:const	nns-	-	-	Create a constant returning the specified double cell value.			class:word	{n/a}	{n/a}	double	rre	
+double:dip	mnq-mn	-	-	Temporarily remove m and n from the stack, execute the quotation, and then restore m and n to the stack.			class:word	{n/a}	{n/a}	global	all	
 double:fetch	a-n	-	-	Fetch the double cell values stored in the double cell variable at a.			class:word	{n/a}	{n/a}	double	rre	
+double:sip	mnq(?n-?)-mn	-	-	Run quote. After execution completes, put a copy of m and n back on top of the stack.			class:word	{n/a}	{n/a}	global	all	
 double:store	nna-	-	-	Store the double cell values on the stack in the double cell variable at a.			class:word	{n/a}	{n/a}	double	rre	
 double:swap	nnmm-mmnn	-	-	Swap double cell value on stack.			class:word	{n/a}	{n/a}	double	rre	
 double:var	nns-	-	-	Create a variable for holding the specified double cell value.			class:word	{n/a}	{n/a}	double	rre	
