@@ -10,8 +10,8 @@
 #define CELL_MAX LLONG_MAX - 1
 #endif
 #endif
-CELL ngaImageCells = 19077;
-CELL ngaImage[] = { 1793,18584,19032,19076,202301,410,382,1242,1535,0,10,1,10,2,10,3,10,4,10,
+CELL ngaImageCells = 19124;
+CELL ngaImage[] = { 1793,18631,19079,19123,202301,410,382,1242,1535,0,10,1,10,2,10,3,10,4,10,
                        5,10,6,10,7,10,8,10,11,10,12,10,13,10,14,10,15,10,16,10,
                        17,10,18,10,19,10,20,10,21,10,22,10,23,10,24,10,25,68223234,1,2575,
                        85000450,1,656912,161,178,268505089,63,62,285281281,0,63,2063,10,101384453,0,9,10,68485378,255,18350338,
@@ -20,8 +20,8 @@ CELL ngaImage[] = { 1793,18584,19032,19076,202301,410,382,1242,1535,0,10,1,10,2,
                        101777669,1,17565186,107,524545,111,64,167838467,-1,134287105,3,59,659457,3,459023,128,2049,56,25,2049,
                        128,1793,135,2049,135,117506307,0,128,0,524545,26,133,168820993,0,147,1642241,147,134283523,11,133,
                        1793,128,524545,2049,128,1793,128,16846593,147,161,178,1793,64,16846593,147,133,178,1793,64,7,
-                       10,659713,1,659713,2,659713,3,659713,4,659713,5,1793,18839,17108737,3,2,524559,128,2049,128,
-                       2049,128,524545,0,128,524545,0,128,2049,142,168820998,2,17820,1242,167841793,211,9,17826049,0,211,
+                       10,659713,1,659713,2,659713,3,659713,4,659713,5,1793,18886,17108737,3,2,524559,128,2049,128,
+                       2049,128,524545,0,128,524545,0,128,2049,142,168820998,2,17867,1242,167841793,211,9,17826049,0,211,
                        2,15,25,524546,188,134287105,212,116,2305,213,459023,221,134287361,212,216,659201,211,10,659969,7,
                        2049,56,25,17694978,58,237,9,84152833,48,319750404,236,117507601,239,184618754,45,25,16974851,-1,168886532,1,
                        134284289,1,252,134284289,0,239,660227,32,0,0,115,105,103,105,108,58,105,0,285278479,269,
@@ -170,7 +170,7 @@ CELL ngaImage[] = { 1793,18584,19032,19076,202301,410,382,1242,1535,0,10,1,10,2,
                        110,58,105,110,99,0,659713,1,10,3114,3139,166,16180,266800217,110,58,100,101,99,0,
                        659969,1,10,3128,3158,166,16180,1032861494,110,58,98,101,116,119,101,101,110,63,0,67503109,
                        1793,3166,67503109,67503109,2049,3106,10,1,3161,2049,2241,11,10,3142,3187,166,16180,-2130983749,83,99,
-                       111,112,101,76,105,115,116,0,18934,18988,10,3172,3198,166,16180,5864091,123,123,0,2049,
+                       111,112,101,76,105,115,116,0,18981,19035,10,3172,3198,166,16180,5864091,123,123,0,2049,
                        1576,2,1,3187,2049,59,16,10,3190,3225,166,16180,-1644352334,45,45,45,114,101,118,101,
                        97,108,45,45,45,0,2049,1576,1,3187,2049,3125,16,10,3207,3241,166,16180,5864159,125,
                        125,0,1,3187,2049,56,4,15,11,1793,3255,3841,3187,4097,2,10,1,3250,1793,3281,
@@ -568,7 +568,7 @@ CELL ngaImage[] = { 1793,18584,19032,19076,202301,410,382,1242,1535,0,10,1,10,2,
                        10,11054,11101,154,16180,-2087665862,100,58,72,97,115,104,45,70,117,110,99,116,105,111,
                        110,0,4875,11080,11116,166,16180,1197910910,100,58,114,101,104,97,115,104,0,1793,11134,1793,
                        11126,2049,188,3841,11101,8,10,1,11120,2049,2241,2049,186,16,10,1,11118,2049,8491,10,
-                       11102,10,154,0,215559733,66,85,73,76,68,0,11139,11171,166,13270,1141548230,102,108,111,97,
+                       11102,11,154,0,215559733,66,85,73,76,68,0,11139,11171,166,13270,1141548230,102,108,111,97,
                        116,58,111,112,101,114,97,116,105,111,110,0,1,2,2049,10655,2,2049,2761,1793,
                        11221,3,2049,4472,69,114,114,111,114,58,32,100,101,118,105,99,101,32,40,48,
                        48,48,50,41,32,110,111,116,32,102,111,117,110,100,0,1,11183,2049,10761,2049,
@@ -890,78 +890,81 @@ CELL ngaImage[] = { 1793,18584,19032,19076,202301,410,382,1242,1535,0,10,1,10,2,
                        0,1,17,2049,2229,2049,59,16,10,17502,17546,166,0,1416012481,100,111,117,98,108,101,
                        58,99,111,110,115,116,0,2049,17471,1,17497,2049,8460,10,17528,17570,166,0,-607259883,100,
                        111,117,98,108,101,58,115,119,97,112,0,67503109,5,67503109,6,10,17553,17591,166,0,
-                       0,109,101,109,58,105,110,118,111,107,101,0,1,15,2049,10655,2049,10636,10,17575,
-                       0,154,0,0,65,76,76,79,67,0,17598,1,154,0,0,70,82,69,69,0,
-                       17609,2,154,0,0,83,84,79,82,69,0,17619,3,154,0,0,70,69,84,67,
-                       72,0,17630,4,154,0,0,82,69,83,73,90,69,0,17553,17668,166,0,369169257,109,
-                       101,109,58,97,108,108,111,99,0,1,0,2049,17591,10,17653,17688,166,0,390806699,109,
-                       101,109,58,115,116,111,114,101,0,1,2,2049,17591,10,17673,17708,166,0,374855624,109,
-                       101,109,58,102,101,116,99,104,0,1,3,2049,17591,10,17693,17727,166,0,1963630784,109,
-                       101,109,58,102,114,101,101,0,1,1,2049,17591,10,17713,17748,166,0,-45070288,109,101,
-                       109,58,114,101,115,105,122,101,0,1,4,2049,17591,10,17732,17768,166,0,371289385,109,
-                       101,109,58,99,101,108,108,43,0,1,4,19,17,10,17753,17795,166,0,84495120,109,
-                       101,109,58,102,101,116,99,104,45,100,111,117,98,108,101,0,2049,2217,1,1,
-                       2049,17768,15,5,2049,17708,6,10,17773,17816,166,18603,193470948,84,73,66,0,1,7,15,
-                       10,17807,17836,166,18603,-460132687,105,109,97,103,101,58,115,97,118,101,0,1,1000,2049,
-                       10655,2049,10636,10,17820,17854,166,0,0,101,100,105,116,63,0,2,1793,17861,1,8,
-                       11,10,1,17857,1793,17869,1,127,11,10,1,17865,2049,2255,22,10,17843,17887,166,0,
-                       0,103,97,116,104,101,114,0,2049,17854,1,15,1,4134,2049,64,10,17875,17907,166,
-                       0,0,99,121,99,108,101,0,2049,10985,2049,2217,4,8,2049,2644,25,3,2049,17887,
-                       1,17907,7,10,17820,17940,166,18603,-1658019367,112,97,114,115,101,45,117,110,116,105,108,
-                       0,1793,17952,2049,4451,2049,4234,2049,17907,771,2049,4096,10,1,17942,2049,4260,10,17923,17968,
-                       166,18603,272733106,115,58,103,101,116,0,1793,17990,1793,17976,1,13,11,10,1,17972,1793,
-                       17984,1,10,11,10,1,17980,2049,2255,22,10,1,17970,2049,17940,10,17957,18006,166,18603,
-                       255552908,99,108,101,97,114,0,2049,4472,92,94,91,50,74,92,94,91,48,59,48,
-                       72,0,1,18008,2049,8246,2049,10761,10,17995,18040,154,18603,-976122143,78,111,69,99,104,111,
-                       0,0,18028,18050,154,0,0,69,79,84,0,0,18041,18065,154,0,0,73,103,110,
-                       111,114,105,110,103,0,0,18051,18081,166,0,0,105,103,110,111,114,105,110,103,
-                       63,0,3841,18065,10,18066,18097,166,0,0,118,101,114,115,105,111,110,0,3841,4,
-                       1,100,20,10,18084,18114,166,0,0,100,111,110,101,63,0,2,4097,18050,1793,18123,
-                       1,13,11,10,1,18119,1793,18131,1,10,11,10,1,18127,1793,18139,1,32,11,10,
-                       1,18135,2049,2298,22,22,10,18103,18156,166,0,0,101,111,108,63,0,3841,18050,1793,
-                       18164,1,13,11,10,1,18160,1793,18172,1,10,11,10,1,18168,2049,2255,22,10,18146,
-                       18190,166,0,0,118,97,108,105,100,63,0,2,2049,102,2049,2812,10,18178,18211,166,
-                       0,0,99,104,101,99,107,45,101,111,102,0,2,1793,18218,1,-1,11,10,1,
-                       18214,1793,18226,1,4,11,10,1,18222,2049,2255,22,1793,18236,2049,11052,10,1,18233,9,
-                       10,18196,18248,166,0,0,98,115,0,2049,4212,1,2,2049,2675,1793,18260,2049,4160,3,
-                       10,1,18256,9,2049,4160,3,10,18240,18281,166,0,0,99,104,101,99,107,45,98,
-                       115,0,2,1793,18288,1,8,11,10,1,18284,1793,18296,1,127,11,10,1,18292,2049,
-                       2255,22,1793,18306,2049,18248,10,1,18303,9,10,18267,18321,166,0,0,99,104,101,99,
-                       107,0,2049,18211,2049,18281,10,18310,18341,166,0,0,99,104,97,114,97,99,116,101,
-                       114,0,2049,10985,2,2049,4134,10,18326,18359,166,0,0,98,117,102,102,101,114,0,
-                       1793,18369,2049,17816,2049,4234,8,2049,4096,10,1,18361,2049,4260,10,18347,18390,166,0,0,
-                       114,101,97,100,45,116,111,107,101,110,0,1793,18406,1793,18401,2049,18341,2049,18321,2049,
-                       18114,10,1,18394,2049,2397,10,1,18392,2049,18359,2049,4587,10,18374,18424,166,0,0,105,
-                       110,112,117,116,0,2049,18390,2049,18190,10,18413,18442,166,0,0,112,114,111,99,101,
-                       115,115,0,2049,18081,1793,18460,771,2049,18156,1793,18456,1,18065,2049,3931,10,1,18451,9,
-                       10,1,18446,2049,2862,1,410,1,15,2049,64,10,18028,18479,178,18603,5861507,47,47,0,
-                       2049,15624,1,18065,2049,3916,10,18471,18498,166,18603,-208531877,98,97,110,110,101,114,0,2049,
-                       18097,2049,4472,82,69,84,82,79,32,49,50,32,40,37,110,46,37,110,41,92,
-                       110,0,1,18502,2049,8246,2049,10761,2049,10837,2049,1545,2049,10837,18,2049,1545,2049,4472,37,
-                       110,32,77,97,120,44,32,37,110,32,85,115,101,100,44,32,37,110,32,70,
-                       114,101,101,92,110,0,1,18538,2049,8246,2049,10761,10,18486,18584,166,18603,192495636,108,105,
-                       115,116,101,110,0,3841,18040,1793,18591,2049,18498,10,1,18588,2049,72,2049,18424,2049,18442,
-                       1,18595,7,10,105,110,116,101,114,102,97,99,101,47,114,101,116,114,111,45,
-                       117,110,105,120,46,114,101,116,114,111,0,18572,18643,154,0,0,83,111,117,114,
-                       99,101,115,0,1,18882,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
+                       -1059622793,100,111,117,98,108,101,58,100,105,112,0,67503109,67503109,5,5,8,6,6,10,
+                       17575,17615,166,0,-1059606458,100,111,117,98,108,101,58,115,105,112,0,1,2217,2049,2229,
+                       2049,17591,10,17599,17638,166,0,0,109,101,109,58,105,110,118,111,107,101,0,1,
+                       15,2049,10655,2049,10636,10,17622,0,154,0,0,65,76,76,79,67,0,17645,1,154,
+                       0,0,70,82,69,69,0,17656,2,154,0,0,83,84,79,82,69,0,17666,3,
+                       154,0,0,70,69,84,67,72,0,17677,4,154,0,0,82,69,83,73,90,69,
+                       0,17599,17715,166,0,369169257,109,101,109,58,97,108,108,111,99,0,1,0,2049,17638,
+                       10,17700,17735,166,0,390806699,109,101,109,58,115,116,111,114,101,0,1,2,2049,17638,
+                       10,17720,17755,166,0,374855624,109,101,109,58,102,101,116,99,104,0,1,3,2049,17638,
+                       10,17740,17774,166,0,1963630784,109,101,109,58,102,114,101,101,0,1,1,2049,17638,10,
+                       17760,17795,166,0,-45070288,109,101,109,58,114,101,115,105,122,101,0,1,4,2049,17638,
+                       10,17779,17815,166,0,371289385,109,101,109,58,99,101,108,108,43,0,1,4,19,17,
+                       10,17800,17842,166,0,84495120,109,101,109,58,102,101,116,99,104,45,100,111,117,98,
+                       108,101,0,2049,2217,1,1,2049,17815,15,5,2049,17755,6,10,17820,17863,166,18650,193470948,
+                       84,73,66,0,1,7,15,10,17854,17883,166,18650,-460132687,105,109,97,103,101,58,115,
+                       97,118,101,0,1,1000,2049,10655,2049,10636,10,17867,17901,166,0,0,101,100,105,116,
+                       63,0,2,1793,17908,1,8,11,10,1,17904,1793,17916,1,127,11,10,1,17912,2049,
+                       2255,22,10,17890,17934,166,0,0,103,97,116,104,101,114,0,2049,17901,1,15,1,
+                       4134,2049,64,10,17922,17954,166,0,0,99,121,99,108,101,0,2049,10985,2049,2217,4,
+                       8,2049,2644,25,3,2049,17934,1,17954,7,10,17867,17987,166,18650,-1658019367,112,97,114,115,
+                       101,45,117,110,116,105,108,0,1793,17999,2049,4451,2049,4234,2049,17954,771,2049,4096,10,
+                       1,17989,2049,4260,10,17970,18015,166,18650,272733106,115,58,103,101,116,0,1793,18037,1793,18023,
+                       1,13,11,10,1,18019,1793,18031,1,10,11,10,1,18027,2049,2255,22,10,1,18017,
+                       2049,17987,10,18004,18053,166,18650,255552908,99,108,101,97,114,0,2049,4472,92,94,91,50,
+                       74,92,94,91,48,59,48,72,0,1,18055,2049,8246,2049,10761,10,18042,18087,154,18650,
+                       -976122143,78,111,69,99,104,111,0,0,18075,18097,154,0,0,69,79,84,0,0,18088,
+                       18112,154,0,0,73,103,110,111,114,105,110,103,0,0,18098,18128,166,0,0,105,
+                       103,110,111,114,105,110,103,63,0,3841,18112,10,18113,18144,166,0,0,118,101,114,
+                       115,105,111,110,0,3841,4,1,100,20,10,18131,18161,166,0,0,100,111,110,101,
+                       63,0,2,4097,18097,1793,18170,1,13,11,10,1,18166,1793,18178,1,10,11,10,1,
+                       18174,1793,18186,1,32,11,10,1,18182,2049,2298,22,22,10,18150,18203,166,0,0,101,
+                       111,108,63,0,3841,18097,1793,18211,1,13,11,10,1,18207,1793,18219,1,10,11,10,
+                       1,18215,2049,2255,22,10,18193,18237,166,0,0,118,97,108,105,100,63,0,2,2049,
+                       102,2049,2812,10,18225,18258,166,0,0,99,104,101,99,107,45,101,111,102,0,2,
+                       1793,18265,1,-1,11,10,1,18261,1793,18273,1,4,11,10,1,18269,2049,2255,22,1793,
+                       18283,2049,11052,10,1,18280,9,10,18243,18295,166,0,0,98,115,0,2049,4212,1,2,
+                       2049,2675,1793,18307,2049,4160,3,10,1,18303,9,2049,4160,3,10,18287,18328,166,0,0,
+                       99,104,101,99,107,45,98,115,0,2,1793,18335,1,8,11,10,1,18331,1793,18343,
+                       1,127,11,10,1,18339,2049,2255,22,1793,18353,2049,18295,10,1,18350,9,10,18314,18368,
+                       166,0,0,99,104,101,99,107,0,2049,18258,2049,18328,10,18357,18388,166,0,0,99,
+                       104,97,114,97,99,116,101,114,0,2049,10985,2,2049,4134,10,18373,18406,166,0,0,
+                       98,117,102,102,101,114,0,1793,18416,2049,17863,2049,4234,8,2049,4096,10,1,18408,2049,
+                       4260,10,18394,18437,166,0,0,114,101,97,100,45,116,111,107,101,110,0,1793,18453,
+                       1793,18448,2049,18388,2049,18368,2049,18161,10,1,18441,2049,2397,10,1,18439,2049,18406,2049,4587,
+                       10,18421,18471,166,0,0,105,110,112,117,116,0,2049,18437,2049,18237,10,18460,18489,166,
+                       0,0,112,114,111,99,101,115,115,0,2049,18128,1793,18507,771,2049,18203,1793,18503,1,
+                       18112,2049,3931,10,1,18498,9,10,1,18493,2049,2862,1,410,1,15,2049,64,10,18075,
+                       18526,178,18650,5861507,47,47,0,2049,15624,1,18112,2049,3916,10,18518,18545,166,18650,-208531877,98,
+                       97,110,110,101,114,0,2049,18144,2049,4472,82,69,84,82,79,32,49,50,32,40,
+                       37,110,46,37,110,41,92,110,0,1,18549,2049,8246,2049,10761,2049,10837,2049,1545,2049,
+                       10837,18,2049,1545,2049,4472,37,110,32,77,97,120,44,32,37,110,32,85,115,101,
+                       100,44,32,37,110,32,70,114,101,101,92,110,0,1,18585,2049,8246,2049,10761,10,
+                       18533,18631,166,18650,192495636,108,105,115,116,101,110,0,3841,18087,1793,18638,2049,18545,10,1,
+                       18635,2049,72,2049,18471,2049,18489,1,18642,7,10,105,110,116,101,114,102,97,99,101,
+                       47,114,101,116,114,111,45,117,110,105,120,46,114,101,116,114,111,0,18619,18690,
+                       154,0,0,83,111,117,114,99,101,115,0,1,18929,0,0,0,0,0,0,0,
                        0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
                        0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
                        0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
                        0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
                        0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
-                       0,0,0,0,0,0,0,0,0,0,0,0,18630,18783,166,0,0,107,110,111,
-                       119,110,63,0,2,1,18643,2049,9003,10,18771,18800,166,0,0,105,110,100,101,120,
-                       0,1,18643,4,2049,9320,1,18643,4,2049,9140,10,18789,18823,166,0,0,114,101,99,
-                       111,114,100,0,2049,4500,2,1,18643,2049,3864,3841,18643,1,18643,17,16,10,1793,18880,
-                       2049,15559,2049,18783,1793,18848,2049,18800,10,1,18845,1793,18855,2049,18823,10,1,18852,2049,64,
-                       1793,18868,1,190,1,2,17,8,10,1,18861,2049,2229,2049,1576,2049,184,16,2049,11116,
-                       10,1,18839,100,105,99,116,45,119,111,114,100,115,45,108,105,115,116,105,110,
-                       103,46,102,111,114,116,104,0,18572,18920,166,18882,-1519205998,100,58,119,111,114,100,115,
-                       0,1793,18929,2049,188,2049,10761,2049,10731,10,1,18922,2049,8491,10,18907,18952,166,18882,1750461083,
-                       100,58,119,111,114,100,115,45,119,105,116,104,0,2049,1977,2049,5573,1793,18983,2049,
-                       188,2,2049,1977,2049,5286,1793,18972,2049,10761,2049,10731,10,1,18967,1793,18978,3,10,1,
-                       18976,2049,64,10,1,18958,2049,8491,10,18934,19009,166,18882,-1509196721,100,105,115,112,108,97,
-                       121,45,105,102,45,108,101,102,116,0,2,2049,1977,2049,5519,1793,19021,2049,10761,2049,
-                       10731,10,1,19016,1793,19027,3,10,1,19025,2049,64,10,18934,19060,166,18882,-1159574567,100,58,
-                       119,111,114,100,115,45,98,101,103,105,110,110,105,110,103,45,119,105,116,104,
-                       0,2049,1977,2049,5573,1793,19071,2049,188,2049,19009,10,1,19066,2049,8491,10,0 };
+                       0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,18677,
+                       18830,166,0,0,107,110,111,119,110,63,0,2,1,18690,2049,9003,10,18818,18847,166,
+                       0,0,105,110,100,101,120,0,1,18690,4,2049,9320,1,18690,4,2049,9140,10,18836,
+                       18870,166,0,0,114,101,99,111,114,100,0,2049,4500,2,1,18690,2049,3864,3841,18690,
+                       1,18690,17,16,10,1793,18927,2049,15559,2049,18830,1793,18895,2049,18847,10,1,18892,1793,18902,
+                       2049,18870,10,1,18899,2049,64,1793,18915,1,190,1,2,17,8,10,1,18908,2049,2229,
+                       2049,1576,2049,184,16,2049,11116,10,1,18886,100,105,99,116,45,119,111,114,100,115,
+                       45,108,105,115,116,105,110,103,46,102,111,114,116,104,0,18619,18967,166,18929,-1519205998,
+                       100,58,119,111,114,100,115,0,1793,18976,2049,188,2049,10761,2049,10731,10,1,18969,2049,
+                       8491,10,18954,18999,166,18929,1750461083,100,58,119,111,114,100,115,45,119,105,116,104,0,
+                       2049,1977,2049,5573,1793,19030,2049,188,2,2049,1977,2049,5286,1793,19019,2049,10761,2049,10731,10,
+                       1,19014,1793,19025,3,10,1,19023,2049,64,10,1,19005,2049,8491,10,18981,19056,166,18929,
+                       -1509196721,100,105,115,112,108,97,121,45,105,102,45,108,101,102,116,0,2,2049,1977,
+                       2049,5519,1793,19068,2049,10761,2049,10731,10,1,19063,1793,19074,3,10,1,19072,2049,64,10,
+                       18981,19107,166,18929,-1159574567,100,58,119,111,114,100,115,45,98,101,103,105,110,110,105,
+                       110,103,45,119,105,116,104,0,2049,1977,2049,5573,1793,19118,2049,188,2049,19056,10,1,
+                       19113,2049,8491,10,0 };
